--- a/GDD403-W2023-ICE6/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/GDD403-W2023-ICE6/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/tsili/OneDrive/Desktop/Canadore/GDD403-W2023-ICEs/GDD403-W2023-ICE6/Builds/Unity;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/tsili/OneDrive/Desktop/Canadore/GDD403-W2023-ICEs/GDD403-W2023-ICE6/Builds/WebGL;C:/Users/tsili/OneDrive/Desktop/Canadore/GDD403-W2023-ICEs/GDD403-W2023-ICE6/Builds/Unity;;;;;;;;\"}"
             }
         ]
     }
